--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
   <h1>
-    Hey, I'm NetworkChuck
+    Hey, I'm Julian Cangelosi
   </h1>
   <body>
     <h2>About me</h2>
     <p>
-      I am a coffee addict who makes videos sometimes.
+      I am an aspiring software engineer.
     </p>
     <h2>What I'm working on</h2>
     <p>
-      I'm obsessed with AI right now and I'm working on the CPTS from HTB.
+      I'm currently working on this website!
     </p>
   </body>
 </html>
