--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
+
 <html>
-  <h1>
-    Hey, I'm Julian Cangelosi
-  </h1>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=2">
+    <title>Julian Cangelosi</title>
+  </head>
   <body>
+    <h1>Hello, I am Julian Cangelosi</h1>
+    <hr>
     <h2>About me</h2>
     <p>
       I am an aspiring software engineer.
     </p>
+    <hr>
     <h2>What I'm working on</h2>
     <p>
-      I'm currently working on this website!
+      I'm currently working on <b> this website! </b>
     </p>
   </body>
 </html>
