added links to linkedin and resume

--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
     <p>
       I'm currently working on <b> this website! </b>
     </p>
+    <hr>
+    <h2>Links:</h2>
+      <a href="https://www.linkedin.com/in/julian-cangelosi/">
+        LinkedIn
+      </a>
+      <a href="Julian_Cangelosi_Resume.pdf" target="_blank">
+        <br>Resume
+      </a>
+      <br>
   </body>
 </html>
