added icons for linkedin and github

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
       I'm currently working on <b> this website! </b>
     </p>
     <hr>
-    <h2>Links:</h2>
-      <a href="https://www.linkedin.com/in/julian-cangelosi/">
-        LinkedIn
+      <a href="https://www.linkedin.com/in/julian-cangelosi/" target="_blank">
+        <img src=assets/linkedin.png width="32" height="32">
+      </a>
+      <a href="https://github.com/JulianCangelosi" target="_blank">
+        <img src=assets/GitHub.png width="48" height="27">
       </a>
       <a href="Julian_Cangelosi_Resume.pdf" target="_blank">
-        <br>Resume
+        Resume
       </a>
       <br>
   </body>
