added icons for linkedin and github

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <h1>Hello, I am Julian Cangelosi</h1>
     <hr>
     <h2>About me</h2>
-    <p>
+    <p style="font-size: 22px;">
       I am an aspiring software engineer.
     </p>
     <hr>
     <h2>What I'm working on</h2>
-    <p>
+    <p style="font-size: 20px;">
       I'm currently working on <b> this website! </b>
     </p>
     <hr>
+    <p style="font-size: 20px;">
       <a href="https://www.linkedin.com/in/julian-cangelosi/" target="_blank">
         <img src=assets/linkedin.png width="32" height="32">
       </a>
@@ -27,6 +28,6 @@
       <a href="Julian_Cangelosi_Resume.pdf" target="_blank">
         Resume
       </a>
-      <br>
+    </p>
   </body>
 </html>
